[package]
name = "immersion_control_engine"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
wgpu = "0.12.0"
cgmath = "0.18"
env_logger = "0.10.0"
futures = "0.3"
gfx-hal = "0.9"
image = "0.24"
log = "0.4"
pollster = "0.3.0"
winit = "0.28.6"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
